
name:               Aono
version:            2.2.1
build-type:         Simple
cabal-version:      >= 1.10

executable aono
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , hakyll
                  , pandoc
                  , transformers
                  , yaml
  ghc-options:      -threaded
  default-language: Haskell2010
  other-modules:    Aono.Type
                  , Aono.Route
