cabal-version:      3.8
name:               Aono
version:            0.3.3

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

extra-source-files: html/*.html
                  , html/*.css

executable aono
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Aono.ArgOpt
                    , Aono.NetPath
                    , Aono.Walker
                    , Aono.DrawHtml

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0
                    , optparse-applicative == 0.18.1.0
                    , text == 2.1.1
                    , rio == 0.1.22.0
                    , blaze-markup == 0.8.3.0
                    , shakespeare == 2.1.0.1
    hs-source-dirs:   src

    default-language: Haskell2010
